--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "to-dot-case",
+  "version": "1.0.0",
+  "description": "Convert a string to dot case.",
   "repository": "git://github.com/ianstormtaylor/to-dot-case.git",
   "license": "MIT",
-  "version": "0.1.3",
-  "description": "Convert a string to dot case.",
-  "keywords": ["dot", "case", "dotcase", "string"],
   "dependencies": {
-    "to-space-case": "0.1.2"
-  }
+    "to-space-case": "^1.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.3.4"
+  },
+  "keywords": [
+    "dot",
+    "case",
+    "dotcase",
+    "string"
+  ]
 }
